--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <version>2.0.0</version>
         </dependency>
 
+        <!--redis依赖配置-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
 
     </dependencies>
